welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: not found: value or
  if (!estFaceMur())or (getCouleurSol==Color.green){
                    ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (!estFaceMur())or (getCouleurSol==Color.green){
  ^