welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance()
  if (!estFaceMur())or (getCouleurSol==Color.green){
  	return true

    
  }
  
}